AUTOMAKE_OPTIONS = foreign

AM_CFLAGS = -I. -I$(top_builddir)/gwlib -I$(top_builddir) -I$(top_builddir)/gw

LDADD = $(top_builddir)/gwlib/libgwlib.la $(top_builddir)/gw/libgw.la

noinst_PROGRAMS = \
	drive_smpp \
	fakesmsc \
	test_boxc \
	test_cfg \
	test_charset \
	test_cimd2 \
	test_conn \
	test_date \
	test_dbpool \
	test_dict \
	test_file_traversal \
	test_hash \
	test_hmac \
	test_http \
	test_http_server \
	test_list \
	test_mem \
	test_msg \
	test_octstr_dump \
	test_octstr_format \
	test_octstr_immutables \
	test_pcre \
	test_prioqueue \
	test_regex \
	test_smsc \
	test_store_dump \
	test_timerset \
	test_udp \
	test_urltrans \
	test_uuid \
	test_wakeup \
	timestamp \
	udpfeed
